--- a/automation/delete.ingresslink-externaldns.yaml
+++ b/automation/delete.ingresslink-externaldns.yaml
@@ -25,4 +25,6 @@
       import_role:
         name: manage_cis_deployment
 
-
+    - name: NIC  
+      import_role:
+        name: manage_nic_deployment
