--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -19,3 +19,7 @@
     - name: CIS  
       import_role:
         name: manage_cis_deployment
+
+    - name: NIC  
+      import_role:
+        name: manage_nic_deployment
