--- a/automation/roles/manage_nic_deployment/files/apdos-rbac.yaml
+++ b/automation/roles/manage_nic_deployment/files/apdos-rbac.yaml
@@ -1,28 +1,28 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: nginx-ingress-app-protect-dos
+  name: nginx-ingress-app-protect
 rules:
-  - apiGroups:
-      - appprotectdos.f5.com
-    resources:
-      - apdospolicies
-      - apdoslogconfs
-      - dosprotectedresources
-    verbs:
-      - "get"
-      - "watch"
-      - "list"
+- apiGroups:
+  - appprotect.f5.com
+  resources:
+  - appolicies
+  - aplogconfs
+  - apusersigs
+  verbs:
+  - "get"
+  - "watch"
+  - "list"
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: nginx-ingress-app-protect-dos
+  name: nginx-ingress-app-protect
 subjects:
-  - kind: ServiceAccount
-    name: nginx-ingress
-    namespace: nginx-ingress
+- kind: ServiceAccount
+  name: nginx-ingress
+  namespace: nginx-ingress
 roleRef:
   kind: ClusterRole
-  name: nginx-ingress-app-protect-dos
+  name: nginx-ingress-app-protect
   apiGroup: rbac.authorization.k8s.io
