--- a/automation/roles/manage_nic_deployment/files/k8s.nginx.org_virtualservers copy.yaml
+++ b/automation/roles/manage_nic_deployment/files/k8s.nginx.org_virtualservers copy.yaml
@@ -4,21 +4,21 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.5
-  name: virtualserverroutes.k8s.nginx.org
+  name: virtualservers.k8s.nginx.org
 spec:
   group: k8s.nginx.org
   names:
-    kind: VirtualServerRoute
-    listKind: VirtualServerRouteList
-    plural: virtualserverroutes
+    kind: VirtualServer
+    listKind: VirtualServerList
+    plural: virtualservers
     shortNames:
-    - vsr
-    singular: virtualserverroute
+    - vs
+    singular: virtualserver
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - description: Current state of the VirtualServerRoute. If the resource has a
-        valid status, it means it has been validated and accepted by the Ingress Controller.
+    - description: Current state of the VirtualServer. If the resource has a valid
+        status, it means it has been validated and accepted by the Ingress Controller.
       jsonPath: .status.state
       name: State
       type: string
@@ -41,7 +41,7 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
-        description: VirtualServerRoute defines the VirtualServerRoute resource.
+        description: VirtualServer defines the VirtualServer resource.
         properties:
           apiVersion:
             description: |-
@@ -61,14 +61,76 @@ spec:
           metadata:
             type: object
           spec:
-            description: VirtualServerRouteSpec is the spec of the VirtualServerRoute
-              resource.
+            description: VirtualServerSpec is the spec of the VirtualServer resource.
             properties:
+              dos:
+                type: string
+              externalDNS:
+                description: ExternalDNS defines externaldns sub-resource of a virtual
+                  server.
+                properties:
+                  enable:
+                    type: boolean
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: Labels stores labels defined for the Endpoint
+                    type: object
+                  providerSpecific:
+                    description: ProviderSpecific stores provider specific config
+                    items:
+                      description: |-
+                        ProviderSpecificProperty defines specific property
+                        for using with ExternalDNS sub-resource.
+                      properties:
+                        name:
+                          description: Name of the property
+                          type: string
+                        value:
+                          description: Value of the property
+                          type: string
+                      type: object
+                    type: array
+                  recordTTL:
+                    description: TTL for the record
+                    format: int64
+                    type: integer
+                  recordType:
+                    type: string
+                type: object
+              gunzip:
+                type: boolean
               host:
+                type: string
+              http-snippets:
                 type: string
               ingressClassName:
                 type: string
-              subroutes:
+              internalRoute:
+                description: InternalRoute allows for the configuration of internal
+                  routing.
+                type: boolean
+              listener:
+                description: VirtualServerListener references a custom http and/or
+                  https listener defined in GlobalConfiguration.
+                properties:
+                  http:
+                    type: string
+                  https:
+                    type: string
+                type: object
+              policies:
+                items:
+                  description: PolicyReference references a policy by name and an
+                    optional namespace.
+                  properties:
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  type: object
+                type: array
+              routes:
                 items:
                   description: Route defines a route.
                   properties:
@@ -539,6 +601,46 @@ spec:
                       type: array
                   type: object
                 type: array
+              server-snippets:
+                type: string
+              tls:
+                description: TLS defines TLS configuration for a VirtualServer.
+                properties:
+                  cert-manager:
+                    description: CertManager defines a cert manager config for a TLS.
+                    properties:
+                      cluster-issuer:
+                        type: string
+                      common-name:
+                        type: string
+                      duration:
+                        type: string
+                      issue-temp-cert:
+                        type: boolean
+                      issuer:
+                        type: string
+                      issuer-group:
+                        type: string
+                      issuer-kind:
+                        type: string
+                      renew-before:
+                        type: string
+                      usages:
+                        type: string
+                    type: object
+                  redirect:
+                    description: TLSRedirect defines a redirect for a TLS.
+                    properties:
+                      basedOn:
+                        type: string
+                      code:
+                        type: integer
+                      enable:
+                        type: boolean
+                    type: object
+                  secret:
+                    type: string
+                type: object
               upstreams:
                 items:
                   description: Upstream defines an upstream.
@@ -697,7 +799,7 @@ spec:
                 type: array
             type: object
           status:
-            description: VirtualServerRouteStatus defines the status for the VirtualServerRoute
+            description: VirtualServerStatus defines the status for the VirtualServer
               resource.
             properties:
               externalEndpoints:
@@ -716,8 +818,6 @@ spec:
               message:
                 type: string
               reason:
-                type: string
-              referencedBy:
                 type: string
               state:
                 type: string
