--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       serviceAccountName: nginx-ingress
       containers:
-      - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:3.2.1
+      - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:3.7.2
         imagePullPolicy: IfNotPresent
         name: nginx-plus-ingress
         ports:
@@ -59,12 +59,13 @@ spec:
           - -nginx-plus
           - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
           - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
-          - -nginx-status-port=9000
+          #- -nginx-status-port=9000
           - -nginx-status-allow-cidrs=0.0.0.0/0
           - -enable-snippets
           - -enable-app-protect
-          - -app-protect-log-level=info
-          - -v=3 # Enables extensive logging. Useful for troubleshooting.
+          - -app-protect-log-level=warn
+          - -ingresslink=nginx-ingress
+          #- -v=3 # Enables extensive logging. Useful for troubleshooting.
           - -report-ingress-status
          #- -external-service=nginx-ingress
           - -enable-prometheus-metrics
