--- a/automation/roles/manage_nic_deployment/tasks/main.yml
+++ b/automation/roles/manage_nic_deployment/tasks/main.yml
@@ -1,7 +1,18 @@
 ---
 # tasks file for roles/install_nic
+- name: Create Namespace and Service Account
+  kubernetes.core.k8s:
+    state: "{{ package_state }}"
+    definition: "{{ lookup('file', 'files/ns-and-sa.yaml') | from_yaml_all }}"
 
-- name: Manage NGINX NIC Deployment
+- name: NGINX JWT in a Docker Config Secret
+  ansible.builtin.command: 
+    cmd: kubectl create secret docker-registry regcred --docker-server=private-registry.nginx.com --docker-username="{{nginx_jwt}}" --docker-password=none -n nginx-ingress
+  ignore_errors: true
+  become: true
+  #no_log: true
+
+- name: Deploy NGINX NIC Deployment
   kubernetes.core.k8s:
     state: "{{ package_state }}"
     definition: "{{ lookup('file', 'files/{{item}}.yaml') | from_yaml_all }}"  
@@ -10,7 +21,6 @@
     - k8s.nginx.org_virtualserverroutes
     - k8s.nginx.org_transportservers
     - k8s.nginx.org_policies
-    - ns-and-sa
     - rbac
     - ap-rbac
     - apdos-rbac
@@ -20,8 +30,6 @@
     - appprotectdos.f5.com_apdoslogconfs
     - appprotectdos.f5.com_apdospolicy
     - appprotectdos.f5.com_dosprotectedresources
-    - appprotect-dos-arb
-    - appprotect-dos-arb-svc
     - nginx-config
     - ingress-class
     - nginx-ingress
