--- a/automation/roles/manage_nic_deployment/files/nginx-config.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-config.yaml
@@ -4,3 +4,7 @@ metadata:
   name: nginx-config
   namespace: nginx-ingress
 data:
+  proxy-protocol: "True"
+  real-ip-header: "proxy_protocol"
+  set-real-ip-from: "0.0.0.0/0"
+
