--- a/automation/roles/manage_nic_deployment/files/nginx-service.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-service.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-ingress
+  name: nginx-ingress-ingresslink
   namespace: nginx-ingress
+  labels:
+    app: ingresslink
 spec:
-  type: NodePort
   ports:
   - port: 80
     targetPort: 80
