--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -95,9 +95,9 @@ spec:
           - -report-ingress-status
           #- -external-service=nginx-ingress
          #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
-          - -enable-cert-manager
+         #- -enable-cert-manager
          #- -enable-external-dns
-          - -enable-app-protect
+         # - -enable-app-protect
          #- -enable-app-protect-dos
          #- -log-level=debug # Enables extensive logging. Useful for troubleshooting. Options include: trace, debug, info, warning, error, fatal
          #- -log-format=glog # Sets the log format. Options include: glog, json, text
