--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -33,9 +33,9 @@ spec:
 #      - name: nginx-log
 #        emptyDir: {}
       containers:
-      - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:3.7.2
+      - image: nginx/nginx-ingress:3.7.2
         imagePullPolicy: IfNotPresent
-        name: nginx-plus-ingress
+        name: nginx-ingress
         ports:
         - name: http
           containerPort: 80
@@ -45,8 +45,6 @@ spec:
           containerPort: 8081
         - name: prometheus
           containerPort: 9113
-        - name: service-insight
-          containerPort: 9114
         readinessProbe:
           httpGet:
             path: /nginx-ready
@@ -88,24 +86,19 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         args:
-          - -nginx-plus
           - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
-          - -mgmt-configmap=$(POD_NAMESPACE)/nginx-config-mgmt
-          - -ingresslink=nginx-ingress
           - -report-ingress-status
           #- -external-service=nginx-ingress
+          - -ingresslink=nginx-ingress
+          - -nginx-status-allow-cidrs=0.0.0.0/0
          #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          #- -enable-cert-manager
          #- -enable-external-dns
-         # - -enable-app-protect
-         #- -enable-app-protect-dos
-         #- -log-level=debug # Enables extensive logging. Useful for troubleshooting. Options include: trace, debug, info, warning, error, fatal
-         #- -log-format=glog # Sets the log format. Options include: glog, json, text
+         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
          #- -enable-prometheus-metrics
-         #- -enable-service-insight
          #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
 #      initContainers:
-#      - image: nginx/nginx-ingress:4.0.0
+#      - image: nginx/nginx-ingress:3.7.2
 #        imagePullPolicy: IfNotPresent
 #        name: init-nginx-ingress
 #        command: ['cp', '-vdR', '/etc/nginx/.', '/mnt/etc']
@@ -120,5 +113,4 @@ spec:
 #        volumeMounts:
 #        - mountPath: /mnt/etc
 #          name: nginx-etc
-      imagePullSecrets:
-        - name: regcred
+
