--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -33,7 +33,7 @@ spec:
 #      - name: nginx-log
 #        emptyDir: {}
       containers:
-      - image: nginx/nginx-ingress:3.7.2
+      - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:3.7.2
         imagePullPolicy: IfNotPresent
         name: nginx-ingress
         ports:
@@ -113,4 +113,5 @@ spec:
 #        volumeMounts:
 #        - mountPath: /mnt/etc
 #          name: nginx-etc
-
+      imagePullSecrets:
+        - name: regcred
