--- a/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
@@ -4,14 +4,8 @@ metadata:
   name: cafe-ingress
   # use annotations with k8s version < 1.18.0
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    appprotect.f5.com/app-protect-policy: "default/dataguard-alarm"
-    appprotect.f5.com/app-protect-enable: "True"
-    appprotect.f5.com/app-protect-security-log-enable: "True"
-    appprotect.f5.com/app-protect-security-log: "default/logconf"
-    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=syslog-svc.default:514" 
 spec:
-  # ingressClassName: nginx # use only with k8s version >= 1.18.0
+  ingressClassName: nginx # use only with k8s version >= 1.18.0
   tls:
   - hosts:
     - "cafe.{{local_domain}}"
@@ -21,16 +15,16 @@ spec:
     http:
       paths:
       - path: /tea
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: tea-svc
             port: 
-              name: http
+              number: 80
       - path: /coffee
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: coffee-svc
             port: 
-              name: http
+              number: 80
