--- a/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
+++ b/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
@@ -1,7 +1,7 @@
 apiVersion: "cis.f5.com/v1"
 kind: IngressLink
 metadata:
-  name: vs-ingresslink
+  name: "cafe.{{local_domain}}"
   namespace: nginx-ingress
 spec:
   virtualServerAddress: "{{app_address}}"
