--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -94,6 +94,7 @@ spec:
           #- -external-service=nginx-ingress
           - -ingresslink=nginx-ingress
           - -nginx-status-allow-cidrs=0.0.0.0/0
+          - -nginx-status-port=9000
          #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          #- -enable-cert-manager
          #- -enable-external-dns
