--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -95,6 +95,7 @@ spec:
           - -ingresslink=nginx-ingress
           - -nginx-status-allow-cidrs=0.0.0.0/0
           - -nginx-status-port=9000
+          - -enable-snippets
          #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          #- -enable-cert-manager
          #- -enable-external-dns
