--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -43,6 +43,8 @@ spec:
           containerPort: 443
         - name: readiness-port
           containerPort: 8081
+        - name: dashboard
+          containerPort: 9000     
         - name: prometheus
           containerPort: 9113
         readinessProbe:
