--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -43,8 +43,6 @@ spec:
           containerPort: 443
         - name: readiness-port
           containerPort: 8081
-        - name: dashboard
-          containerPort: 9000     
         - name: prometheus
           containerPort: 9113
         readinessProbe:
@@ -94,6 +92,7 @@ spec:
           #- -external-service=nginx-ingress
           - -ingresslink=nginx-ingress
           - -nginx-status-allow-cidrs=0.0.0.0/0
+          - -nginx-status-port=9000
           - -enable-snippets=true
          #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          #- -enable-cert-manager
