--- a/automation/roles/manage_cis_deployment/templates/ingress_deployment.yaml
+++ b/automation/roles/manage_cis_deployment/templates/ingress_deployment.yaml
@@ -44,6 +44,9 @@ spec:
               "--bigip-url={{ bigip_mgt }}",
               "--bigip-partition=k8s",
               "--namespace=nginx-ingress",
+              "--gtm-bigip-username=$(BIGIP_USERNAME)",
+              "--gtm-bigip-password=$(BIGIP_PASSWORD)",
+              "--gtm-bigip-url={{bigip_dns_mgt}}",              
               "--pool-member-type=cluster",
               "--static-routing-mode=true",
               "--orchestration-cni=flannel",
