--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -13,94 +13,95 @@ spec:
       labels:
         app: nginx-ingress
         app.kubernetes.io/name: nginx-ingress
-     #annotations:
-       #prometheus.io/scrape: "true"
-       #prometheus.io/port: "9113"
-       #prometheus.io/scheme: http
+      #annotations:
+      #prometheus.io/scrape: "true"
+      #prometheus.io/port: "9113"
+      #prometheus.io/scheme: http
     spec:
       serviceAccountName: nginx-ingress
       automountServiceAccountToken: true
       securityContext:
         seccompProfile:
           type: RuntimeDefault
-#      volumes:
-#      - name: nginx-etc
-#        emptyDir: {}
-#      - name: nginx-cache
-#        emptyDir: {}
-#      - name: nginx-lib
-#        emptyDir: {}
-#      - name: nginx-log
-#        emptyDir: {}
+      #      volumes:
+      #      - name: nginx-etc
+      #        emptyDir: {}
+      #      - name: nginx-cache
+      #        emptyDir: {}
+      #      - name: nginx-lib
+      #        emptyDir: {}
+      #      - name: nginx-log
+      #        emptyDir: {}
       containers:
-      - image: nginx-plus-ingress:3.7.2
-        imagePullPolicy: IfNotPresent
-        name: nginx-plus-ingress
-        ports:
-        - name: http
-          containerPort: 80
-        - name: https
-          containerPort: 443
-        - name: readiness-port
-          containerPort: 8081
-        - name: prometheus
-          containerPort: 9113
-        - name: service-insight
-          containerPort: 9114
-        readinessProbe:
-          httpGet:
-            path: /nginx-ready
-            port: readiness-port
-          periodSeconds: 1
-        resources:
-          requests:
-            cpu: "100m"
-            memory: "128Mi"
-         #limits:
-         #  cpu: "1"
-         #  memory: "1Gi"
-        securityContext:
-          allowPrivilegeEscalation: false
-#          readOnlyRootFilesystem: true
-          runAsUser: 101 #nginx
-          runAsNonRoot: true
-          capabilities:
-            drop:
-            - ALL
-            add:
-            - NET_BIND_SERVICE
-#        volumeMounts:
-#        - mountPath: /etc/nginx
-#          name: nginx-etc
-#        - mountPath: /var/cache/nginx
-#          name: nginx-cache
-#        - mountPath: /var/lib/nginx
-#          name: nginx-lib
-#        - mountPath: /var/log/nginx
-#          name: nginx-log
-        env:
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        args:
-          - -nginx-plus
-          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
-          - -report-ingress-status
-          - -external-service=nginx-ingress
-         #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
-         #- -enable-cert-manager
-         #- -enable-external-dns
-         #- -enable-app-protect
-         #- -enable-app-protect-dos
-         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
-         #- -enable-prometheus-metrics
-         #- -enable-service-insight
-         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
+        - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:3.7.2
+          imagePullPolicy: IfNotPresent
+          name: nginx-plus-ingress
+          ports:
+            - name: http
+              containerPort: 80
+            - name: https
+              containerPort: 443
+            - name: readiness-port
+              containerPort: 8081
+            - name: prometheus
+              containerPort: 9113
+            - name: service-insight
+              containerPort: 9114
+          readinessProbe:
+            httpGet:
+              path: /nginx-ready
+              port: readiness-port
+            periodSeconds: 1
+          resources:
+            requests:
+              cpu: '100m'
+              memory: '128Mi'
+            #limits:
+            #  cpu: "1"
+            #  memory: "1Gi"
+          securityContext:
+            allowPrivilegeEscalation: false
+            #          readOnlyRootFilesystem: true
+            runAsUser: 101 #nginx
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
+              add:
+                - NET_BIND_SERVICE
+          #        volumeMounts:
+          #        - mountPath: /etc/nginx
+          #          name: nginx-etc
+          #        - mountPath: /var/cache/nginx
+          #          name: nginx-cache
+          #        - mountPath: /var/lib/nginx
+          #          name: nginx-lib
+          #        - mountPath: /var/log/nginx
+          #          name: nginx-log
+          env:
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          args:
+            - -nginx-plus
+            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
+            - -report-ingress-status
+            - -external-service=nginx-ingress
+            - -enable-snippets=true
+            #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
+            #- -enable-cert-manager
+            #- -enable-external-dns
+            #- -enable-app-protect
+            #- -enable-app-protect-dos
+            #- -v=3 # Enables extensive logging. Useful for troubleshooting.
+            #- -enable-prometheus-metrics
+            #- -enable-service-insight
+            #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
 #      initContainers:
 #      - image: nginx/nginx-ingress:3.7.2
 #        imagePullPolicy: IfNotPresent
