--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -90,6 +90,7 @@ spec:
           args:
             - -nginx-plus
             - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
+            - -nginx-status-allow-cidrs=0.0.0.0/0
             - -report-ingress-status
             - -external-service=nginx-ingress
             - -enable-snippets=true
