--- a/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
@@ -20,9 +20,9 @@ spec:
 #      policies:
 #        - name: oidc-policy
       action:
-        pass: coffee-svc
+        pass: coffee
     - path: /tea
 #      policies:
 #        - name: oidc-policy
       action:
-        pass: tea-svc
+        pass: tea
