--- a/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
@@ -17,8 +17,8 @@ spec:
       port: 80
   routes:
     - path: /coffee
-#      policies:
-#        - name: oidc-policy
+      policies:
+        - name: oidc-policy
       action:
         pass: coffee
     - path: /tea
