--- a/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
@@ -20,9 +20,11 @@ spec:
       policies:
         - name: oidc-policy
       action:
-        pass: coffee
+      proxy:
+        upstream: coffee
+        rewritePath: /
     - path: /tea
-#      policies:
-#        - name: oidc-policy
+      #      policies:
+      #        - name: oidc-policy
       action:
         pass: tea
