--- a/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
+++ b/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   virtualServerAddress: "{{app_address}}"
   host: "cafe.{{local_domain}}"
+  policyName: ldap.psp
   iRules:
     - /Common/Shared/Proxy_Protocol_iRule
   selector:
