--- a/automation/roles/manage_app2_deployment/tasks/main.yml
+++ b/automation/roles/manage_app2_deployment/tasks/main.yml
@@ -23,6 +23,17 @@
     state: '{{ package_state }}'
     definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"
   with_items:
+    - client-secret
+    - nginx-ingress-headless
+    - nginx-config
+    - oidc
+
+- name: Manage Ingresslink and ExternalDNS CRD
+  kubernetes.core.k8s:
+    namespace: default
+    state: '{{ package_state }}'
+    definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"
+  with_items:
     - virtual-server
     - vs-ingresslink
     - edns
