--- a/automation/roles/manage_app2_deployment/files/vs-ingresslink.yaml
+++ b/automation/roles/manage_app2_deployment/files/vs-ingresslink.yaml
@@ -1,11 +1,11 @@
-apiVersion: "cis.f5.com/v1"
+apiVersion: 'cis.f5.com/v1'
 kind: IngressLink
 metadata:
-  name: vs-ingresslink
+  name: app.vs-ingresslink
   namespace: nginx-ingress
 spec:
-  virtualServerAddress: "{{app_address}}"
-  host: "webapp.{{local_domain}}"
+  virtualServerAddress: '{{app_address}}'
+  host: 'webapp.{{local_domain}}'
   iRules:
     - /Common/Shared/Proxy_Protocol_iRule
   selector:
