--- a/automation/roles/manage_app2_deployment/files/edns.yaml
+++ b/automation/roles/manage_app2_deployment/files/edns.yaml
@@ -16,11 +16,11 @@ spec:
     monitors:
     - interval: 10
       recv: ""
-      send: "GET /tea HTTP/1.1\r\nHost: webapp.{{local_domain}}\r\n"
+      send: "GET / HTTP/1.1\r\nHost: webapp.{{local_domain}}\r\n"
       timeout: 31
       type: https
     - interval: 10
       recv: ""
-      send: "GET /coffee HTTP/1.1\r\nHost: webapp.{{local_domain}}\\r\n"
+      send: "GET / HTTP/1.1\r\nHost: webapp.{{local_domain}}\\r\n"
       timeout: 31
       type: https
