--- a/automation/roles/manage_app2_deployment/files/edns.yaml
+++ b/automation/roles/manage_app2_deployment/files/edns.yaml
@@ -21,6 +21,6 @@ spec:
       type: https
     - interval: 10
       recv: ""
-      send: "GET / HTTP/1.1\r\nHost: webapp.{{local_domain}}\\r\n"
+      send: "GET / HTTP/1.1\r\nHost: webapp.{{local_domain}}\r\n"
       timeout: 31
       type: https
