--- a/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
@@ -5,7 +5,9 @@ metadata:
 spec:
   host: 'cafe.{{local_domain}}'
   tls:
-    secret: cafe-secret
+    secret: cafe-secret   
+    cert-manager:
+      cluster-issuer: lab.test.local
     redirect:
       enable: true
   upstreams:
