--- a/automation/roles/manage_app2_deployment/files/virtual-server.yaml
+++ b/automation/roles/manage_app2_deployment/files/virtual-server.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   host: 'webapp.{{local_domain}}'
   tls:
-    secret: webapp_tls
+    secret: webapp-tls
     cert-manager:
       cluster-issuer: lab.test.local
     redirect:
