--- a/automation/roles/manage_app2_deployment/files/virtual-server.yaml
+++ b/automation/roles/manage_app2_deployment/files/virtual-server.yaml
@@ -16,7 +16,7 @@ spec:
       port: 80
   routes:
     - path: /
-      policies:
-        - name: oidc-policy
+      #policies:
+      #  - name: oidc-policy
       action:
         pass: webapp
