--- a/automation/roles/manage_app2_deployment/files/oidc.yaml
+++ b/automation/roles/manage_app2_deployment/files/oidc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   oidc:
     clientID: d091550e74667066edc6ae6fd9350abc4a0e77658a441c65
-    clientSecret: oidc-secret
+    clientSecret: "safdasdfasdf"
     authEndpoint: https://idam.test.local/f5-oauth2/v1/authorize
     tokenEndpoint: https://idam.test.local/f5-oauth2/v1/token
     jwksURI: https://idam.test.local/f5-oauth2/v1/jwks
