--- a/automation/roles/manage_app2_deployment/files/client-secret.yaml
+++ b/automation/roles/manage_app2_deployment/files/client-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: oidc-secret
 type: nginx.org/oidc
 data:
-  client-secret: 38157f52b1ec3c53a37025c79759c6571ca7507721d6525400705eff76b08967
+  client-secret: YmlnaXAxMjM=
