--- a/automation/roles/manage_app2_deployment/files/client-secret.yaml
+++ b/automation/roles/manage_app2_deployment/files/client-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: oidc-secret
 type: nginx.org/oidc
 data:
-  client-secret: YmlnaXAxMjM=
+  client-secret: ZDY4NTc5ZGJiN2RlM2IyYThmYzg2Y2Q4ZmFkZTM4ZGJiMjc2Zjg1NjBjMjcwYWJjNGEwZTc3NjU4YTQ0MWM2NQ==
