--- a/automation/roles/manage_app2_deployment/tasks/main.yml
+++ b/automation/roles/manage_app2_deployment/tasks/main.yml
@@ -23,7 +23,7 @@
     state: '{{ package_state }}'
     definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"
   with_items:
-    #- client-secret
+    - client-secret
     - nginx-ingress-headless
     - nginx-config
     - oidc
