--- a/automation/roles/manage_app2_deployment/files/virtual-server.yaml
+++ b/automation/roles/manage_app2_deployment/files/virtual-server.yaml
@@ -4,8 +4,8 @@ metadata:
   name: webapp
 spec:
   host: 'webapp.{{local_domain}}'
-  policies:
-    - name: oidc-policy  
+  #policies:
+  #  - name: oidc-policy  
   tls:
     secret: webapp-tls
     cert-manager:
