--- a/automation/roles/manage_app2_deployment/tasks/main.yml
+++ b/automation/roles/manage_app2_deployment/tasks/main.yml
@@ -24,8 +24,8 @@
     definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"
   with_items:
     - client-secret
-    #- nginx-ingress-headless
-    #- nginx-config
+    - nginx-ingress-headless
+    - nginx-config
     - oidc
 
 - name: Manage Ingresslink and ExternalDNS CRD
