--- a/automation/roles/manage_app2_deployment/files/client-secret.yaml
+++ b/automation/roles/manage_app2_deployment/files/client-secret.yaml
@@ -4,4 +4,5 @@ metadata:
   name: oidc-secret
 type: nginx.org/oidc
 data:
-  client-secret: 128f09b2e961742e4208f5cd7f41686bfc2328309627525400705effb06f8d67
+  client-secret: MTI4ZjA5YjJlOTYxNzQyZTQyMDhmNWNkN2Y0MTY4NmJmYzIzMjgzMDk2Mjc1MjU0MDA3MDVlZmZi
+MDZmOGQ2Nw==
