--- a/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
@@ -8,6 +8,8 @@ spec:
     secret: cafe-secret   
     redirect:
       enable: true
+    cert-manager:
+      cluster-issuer: lab.test.local      
   upstreams:
     - name: coffee
       service: coffee-svc
