--- a/automation/roles/manage_app2_deployment/files/client-secret.yaml
+++ b/automation/roles/manage_app2_deployment/files/client-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: oidc-secret
 type: nginx.org/oidc
 data:
-  client-secret: "MTI4ZjA5YjJlOTYxNzQyZTQyMDhmNWNkN2Y0MTY4NmJmYzIzMjgzMDk2Mjc1MjU0MDA3MDVlZmZiMDZmOGQ2Nw=="
+  client-secret: MTI4ZjA5YjJlOTYxNzQyZTQyMDhmNWNkN2Y0MTY4NmJmYzIzMjgzMDk2Mjc1MjU0MDA3MDVlZmZiMDZmOGQ2Nw==
