--- a/automation/roles/manage_app2_deployment/files/virtual-server.yaml
+++ b/automation/roles/manage_app2_deployment/files/virtual-server.yaml
@@ -12,6 +12,7 @@ spec:
       cluster-issuer: lab.test.local
     redirect:
       enable: true
+      code: 301
   upstreams:
     - name: webapp
       service: webapp-svc
