--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -32,10 +32,10 @@ spec:
       #        emptyDir: {}
       #      - name: nginx-log
       #        emptyDir: {}
-      volumes:
-      - name: oidc-volume
-        configMap:
-          name: oidc-config-map      
+#      volumes:
+#      - name: oidc-volume
+#        configMap:
+#          name: oidc-config-map      
       containers:
         - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:3.7.2
           imagePullPolicy: IfNotPresent
@@ -73,11 +73,11 @@ spec:
                 - ALL
               add:
                   - NET_BIND_SERVICE
-          volumeMounts:
-          - name: oidc-volume
-            mountPath: /etc/nginx/oidc/oidc.conf
-            subPath: oidc.conf # Must match the name in the data filed
-            readOnly: true                
+#          volumeMounts:
+#          - name: oidc-volume
+#            mountPath: /etc/nginx/oidc/oidc.conf
+#            subPath: oidc.conf # Must match the name in the data filed
+#            readOnly: true                
             #        volumeMounts:
           #        - mountPath: /etc/nginx
           #          name: nginx-etc
