--- a/automation/roles/manage_app2_deployment/tasks/main.yml
+++ b/automation/roles/manage_app2_deployment/tasks/main.yml
@@ -17,16 +17,16 @@
 #    state: '{{ package_state }}'
 #    definition: "{{ lookup('template', 'files/app-secret.j2') | from_yaml_all }}"
 
-- name: Manage NGINX and OIDC
-  kubernetes.core.k8s:
-    namespace: default
-    state: '{{ package_state }}'
-    definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"
-  with_items:
-    #- client-secret
-    #- nginx-ingress-headless
-    #- nginx-config
-    #- oidc
+#- name: Manage NGINX and OIDC
+#  kubernetes.core.k8s:
+#    namespace: default
+#    state: '{{ package_state }}'
+#    definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"
+#  with_items:
+#    - client-secret
+#    - nginx-ingress-headless
+#    - nginx-config
+#    - oidc
 
 - name: Manage Ingresslink and virtual-server
   kubernetes.core.k8s:
