--- a/automation/roles/manage_app2_deployment/tasks/main.yml
+++ b/automation/roles/manage_app2_deployment/tasks/main.yml
@@ -25,7 +25,7 @@
   with_items:
     - client-secret
     - nginx-ingress-headless
-    #- nginx-config
+    - nginx-config
     - oidc
 
 - name: Manage Ingresslink and virtual-server
