--- a/automation/roles/manage_nic_deployment/tasks/main.yml
+++ b/automation/roles/manage_nic_deployment/tasks/main.yml
@@ -20,6 +20,8 @@
 
     - rbac
     - default-server-secret
+    - ap-rbac
+    - apdoc-rbac
     - nginx-config
     - ingress-class
 
@@ -28,6 +30,10 @@
     - k8s.nginx.org_transportservers
     - k8s.nginx.org_policies
     - k8s.nginx.org_globalconfigurations
+
+    - appprotect.f5.com_aplogconfs
+    - appprotect.f5.com_appolicies
+    - appprotect.f5.com_apusersigs
 
     - nginx-plus-ingress
     - nginx-service
