--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -109,7 +109,7 @@ spec:
             #- -enable-external-dns
             - -enable-app-protect
             #- -enable-app-protect-dos
-            - -v=3 # Enables extensive logging. Useful for troubleshooting.
+            #- -v=3 # Enables extensive logging. Useful for troubleshooting.
             #- -enable-prometheus-metrics
             #- -enable-service-insight
             #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
