--- a/automation/roles/manage_nic_deployment/tasks/main.yml
+++ b/automation/roles/manage_nic_deployment/tasks/main.yml
@@ -20,8 +20,8 @@
 
     - rbac
     #- default-server-secret
-    - ap-rbac
-    - apdos-rbac
+    #- ap-rbac
+    #- apdos-rbac
     - nginx-config
     - ingress-class
 
