--- a/automation/delete.ingresslink-externaldns.yaml
+++ b/automation/delete.ingresslink-externaldns.yaml
@@ -21,6 +21,10 @@
       become: true
       ignore_errors: true
 
+    - name: Install Cert Manager
+      import_role:
+        name: manage_cert_manager
+
     - name: CIS  
       import_role:
         name: manage_cis_deployment
