--- a/automation/roles/manage_app_deployment/tasks/main.yml
+++ b/automation/roles/manage_app_deployment/tasks/main.yml
@@ -11,11 +11,11 @@
 #    - ap-logconf
 #    - ap-apple-uds    
 
-- name: APP Secrets
-  kubernetes.core.k8s:
-    namespace: default
-    state: "{{ package_state }}"
-    definition: "{{ lookup('template', 'files/cafe-secret.j2') | from_yaml_all }}" 
+#- name: APP Secrets
+#  kubernetes.core.k8s:
+#    namespace: default
+#    state: "{{ package_state }}"
+#    definition: "{{ lookup('template', 'files/cafe-secret.j2') | from_yaml_all }}" 
 
 - name: Manage Ingresslink and ExternalDNS CRD
   kubernetes.core.k8s:
