--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -95,7 +95,7 @@ spec:
             - -external-service=nginx-ingress
             - -enable-snippets=true
             #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
-            #- -enable-cert-manager
+            - -enable-cert-manager
             #- -enable-external-dns
             #- -enable-app-protect
             #- -enable-app-protect-dos
