--- a/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-virtual-server.yaml
@@ -4,6 +4,8 @@ metadata:
   name: cafe-virtual-server
 spec:
   host: 'cafe.{{local_domain}}'
+  policies:
+  - name: waf-policy  
   tls:
     secret: cafe-secret   
     redirect:
